#+STARTUP: showeverything
* USDA Signature update
** Shut down and back up production
** Iterations
*** #1: copy db from production to dev; perform following ops locally
*** #2: perform following ops on production
** Merge to master
** COMMENT Database changes
CREATE TABLE Shopper
(
    id                 INTEGER PRIMARY KEY NOT NULL,
    name               VARCHAR DEFAULT '',
    assigned_to_family VARCHAR REFERENCES Client
                           ON DELETE CASCADE
                           ON UPDATE CASCADE
);

INSERT INTO Shopper (id) VALUES (1);
INSERT INTO Shopper (id) VALUES (2);
INSERT INTO Shopper (id) VALUES (3);
INSERT INTO Shopper (id) VALUES (4);
INSERT INTO Shopper (id) VALUES (5);
INSERT INTO Shopper (id) VALUES (6);
INSERT INTO Shopper (id) VALUES (7);
INSERT INTO Shopper (id) VALUES (8);

** Reports changes
*** DELETE FROM Report;
*** Add the entirety of reports.sql
** mkdir -p <toplevel>/reports
** Install new software
** Run new software