@@ -6,13 +6,15 @@
 *** #2: perform following ops on production
 ** Merge to master
 ** COMMENT Database changes
+DROP TABLE IF EXISTS Shopper;
 CREATE TABLE Shopper
 (
     id                 INTEGER PRIMARY KEY NOT NULL,
     name               VARCHAR DEFAULT '',
-    assigned_to_family VARCHAR REFERENCES Client
+    family_name        VARCHAR REFERENCES Client
                            ON DELETE CASCADE
-                           ON UPDATE CASCADE
+                           ON UPDATE CASCADE,
+    online             BOOLEAN DEFAULT FALSE
 );
 
 INSERT INTO Shopper (id) VALUES (1);
